--- a/static/styles.css
+++ b/static/styles.css
@@ -1,9 +1,12 @@
 
 div {
     text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
     /* padding: 25px 50px 75px 100px; */
+    
   }
-.hover-button {
+/* .hover-button {
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -15,9 +18,25 @@ div {
   font-size: 55px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
-  width: 300px; /* Set the desired width */
-  height: 180px; /* Set the desired height */
-  margin: 10px; /* Add some margin for spacing */
+  width: 300px; 
+  height: 180px; 
+  margin: 10px; 
   text-align: center;
   border: none;
-  }
+  } */
+.ask-me {
+  height: 180px;
+
+}
+
+.division1 {
+  padding-top: 9%;
+}
+
+.division2 {
+  padding-top: 4%;
+}
+
+.btn-dark {
+  height: 80px;
+}
