--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speech Recognition Example</title>
+    <title>Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles1.css') }}">
 </head>
+
 <body>
-    <h1>Voice Input Example</h1>
+    <h1>Sign Up</h1>
 
     <form id="signupForm" action="{{ url_for('signup') }}" method="post">
-      <div>
-          <label for="nameInput">Your Name:</label>
-          <input type="text" name="name" id="nameInput" placeholder="Your Name">
-          <button type="button" id="speakNameButton">Speak Your Name</button>
-      </div>
-  
-      <div>
-          <label for="numberInput">Your Mobile Number:</label>
-          <input type="text" name="phnumber" id="numberInput" placeholder="Your Mobile Number">
-          <button type="button" id="speakNumberButton">Speak Your number</button>
-      </div>
-  
-      <div>
-          <button type="submit" id="submitButton" class="btn btn-primary">Submit</button>
-      </div>
-  </form>
-
-    <script src="static/script1.js"></script>
+        <div class="main-div">
+            <div class="d-grid gap-2">
+                <button type="button" class="btn btn-outline-info btn-block" id="speakNameButton">Speak Your Name</button>
+            </div>
+            <div>
+                <input type="text" name="name" id="nameInput" placeholder="Your Name">
+            </div>
+        </div>
+        <div class="main-div">
+            <div class="d-grid gap-2">
+                <button type="button" class="btn btn-outline-info btn-block" id="speakNumberButton">Speak Your mobile number</button>
+            </div>
+            <div>
+                <input type="text" name="phnumber" id="numberInput" placeholder="Your Mobile Number">
+            </div>
+        </div>
+        <div class="d-grid gap-2 main-div">
+            <button type="submit" id="submitButton" class="btn btn-info">Submit</button>
+        </div>
+        <div class="d-grid gap-2">
+            <a id="loginButton" href="{{ url_for('login') }}">
+                <button class="btn btn-dark btn-hover" style="width: 100%;">If already Signed Up, Then click here to login</button>
+            </a>
+        </div>
+    </form>
+    <script src="{{ url_for('static', filename='script1.js') }}"></script>
 </body>
 </html>
